added search and filter

--- a/lang/en/translations.json
+++ b/lang/en/translations.json
@@ -46,5 +46,6 @@
     "error-lesson": "Error loading lesson",
     "please-wait": "Please wait...",
     "lesson-saved": "Lesson saved!",
-    "add-new-lesson": "Create a new lesson"
+    "add-new-lesson": "Create a new lesson",
+    "search-title": "Search title"
 }
