--- a/lang/nl/translations.json
+++ b/lang/nl/translations.json
@@ -46,5 +46,7 @@
     "error-lesson": "Fout bij het laden van de les",
     "please-wait": "Even geduld aub...",
     "lesson-saved": "Les is opgeslagen!",
-    "add-new-lesson": "Nieuwe les aanmaken"
+    "add-new-lesson": "Nieuwe les aanmaken",
+    "search-title": "Zoek titel"
+
 }
