--- a/lang/nl/translations.json
+++ b/lang/nl/translations.json
@@ -49,6 +49,8 @@
     "add-new-lesson": "Nieuwe les aanmaken",
     "search-title": "Zoek titel",
     "filter-rating": "Filteren op beoordeling",
-    "filter-deselect": "Alle beoordelingen"
-
+    "filter-deselect": "Alle beoordelingen",
+    "english": "engels",
+    "dutch": "nederlands",
+    "title-empty": "De titel in het {title} mag niet leeg zijn."
 }
