--- a/lang/nl/translations.json
+++ b/lang/nl/translations.json
@@ -38,6 +38,7 @@
     "completed": "Voltooid",
     "not-completed": "Niet voltooid",
     "back": "terug",
+    "edit": "Pas aan",
     "delete": "verwijderen",
     "save": "opslaan",
     "cancel": "annuleren",
